# app-reconciliator

./: .gitignore  AutoRecon.py  README.md  build.py  pyproject.toml  reconciliator.py  requirements.txt  requirements.v2.txt
.github/workflows/: release.yml
Demo Files/: source.xlsx
SQL/: prevalidation.sql
resources/demo/: target.xlsx
src/app_reconciliator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/config/: __init__.py  _version.py  constants.py  settings.py
src/core/: __init__.py  main.py  reconciliator.py
src/ui/: __init__.py  ui_functions.py  widgets.py
src/utils/: __init__.py  data_processor.py  file_handler.py  logger.py
src/workers/: __init__.py  threads.py
